Add titles to arch protfolio projects

--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
 
         <section class="home">
             <a id="Home"></a>
-            <p>Home</p>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPDvcE88Ko99WK18BKRiJ9MEpVWQ05UWsBVp-filwJDPwL4Iec" alt="">
         </section>
 
         <section class="arch">
             <a id="Arch-Portfolio"></a>
+            <h1>Arch portfolio</h1>
             <ul class="thumbnail-list">
                 <li class="thumbnail-item">
                     <div class="front-side">
@@ -81,12 +82,14 @@
                     <a href="img/santa_3.jpg" data-lightbox="santa" data-title="South facade view" data-alt="South facade view"></a>
                     <a href="img/santa_4.jpg" data-lightbox="santa" data-title="Axonometry" data-alt="Axonometry"></a>
                     <a href="img/santa_5.jpg" data-lightbox="santa" data-title="Axonometric section" data-alt="Axonometric section"></a>
+                    <div class="back-side">Santa´s Factory</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/ice_city_1.jpg" data-lightbox="ice-city" data-title="Location" data-alt="Location">
                         <img class="thumbnail-image" src="img/ice_city_0.svg" alt="Ice city logo">
                     </a>
                     <a href="img/ice_city_2.jpg" data-lightbox="ice-city" data-title="Axonometry" data-alt="Axonometry"></a>
+                    <div class="back-side">Ice City</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/la_hotel_1.jpg" data-lightbox="la-hotel" data-title="Night aerial view, image courtesy of asap llpc" data-alt="Night aerial view">
@@ -95,6 +98,7 @@
                     <a href="img/la_hotel_2.jpg" data-lightbox="la-hotel" data-title="Day street view, image courtesy of asap llpc" data-alt="Day street view"></a>
                     <a href="img/la_hotel_3.jpg" data-lightbox="la-hotel" data-title="Night street view, image courtesy of asap llpc" data-alt="Night street view"></a>
                     <a href="img/la_hotel_4.jpg" data-lightbox="la-hotel" data-title="Day street view, image courtesy of asap llpc" data-alt="Day street view"></a>
+                    <div class="back-side">Spring St Hotel</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/inspiration_hotel_1.jpg" data-lightbox="inspiration-hotel" data-title="Location axonometry" data-alt="Location axonometry">
@@ -105,6 +109,7 @@
                     <a href="img/inspiration_hotel_4.jpg" data-lightbox="inspiration-hotel" data-title="Module 3" data-alt="Module 3"></a>
                     <a href="img/inspiration_hotel_5.jpg" data-lightbox="inspiration-hotel" data-title="Module 4" data-alt="Module 4"></a>
                     <a href="img/inspiration_hotel_6.jpg" data-lightbox="inspiration-hotel" data-title="Module 5" data-alt="Module 5"></a>
+                    <div class="back-side">Inspiration Hotel</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/degree_project_1.jpg" data-lightbox="degree-project" data-title="Location axonometry" data-alt="Location axonometry">
@@ -117,29 +122,32 @@
                     <a href="img/degree_project_6.jpg" data-lightbox="degree-project" data-title="Hotel hall" data-alt="Hotel hall"></a>
                     <a href="img/degree_project_7.jpg" data-lightbox="degree-project" data-title="Multiuse building entrance" data-alt="Multiuse building entrance"></a>
                     <a href="img/degree_project_8.jpg" data-lightbox="degree-project" data-title="Detail section" data-alt="Detail section"></a>
+                    <div class="back-side">Master´s Project</div>
+                    
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/hospital_1.png" data-lightbox="hospital" data-title="Location, image courtesy of beades arquitectos sap" data-alt="Location">
                         <img class="thumbnail-image" src="img/hospital_0.svg" alt="Zhengzhou hospital logo">
                     </a>
-                    <a href="img/hospital_2.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap"
-                        data-alt="Exterior view">
-                        <a href="img/hospital_3.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap"
-                            data-alt="Exterior view"></a>
+                    <a href="img/hospital_2.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap" data-alt="Exterior view"></a>
+                    <a href="img/hospital_3.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap" data-alt="Exterior view"></a>
+                    <div class="back-side">Zhengzhou Hospital</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/church_1.jpg" data-lightbox="church" data-title="Scketchs" data-alt="Scketchs">
                         <img class="thumbnail-image" src="img/church_0.svg" alt="Church">
                     </a>
                     <a href="img/church_2.jpg" data-lightbox="church" data-title="Interior view" data-alt="Interior view">
-                        <a href="img/church_3.jpg" data-lightbox="church" data-title="Axonometries and plan" data-alt="Axonometries and plan"></a>
-                        <a href="img/church_4.jpg" data-lightbox="church" data-title="Elevation and section" data-alt="Elevation and section"></a>
+                    <a href="img/church_3.jpg" data-lightbox="church" data-title="Axonometries and plan" data-alt="Axonometries and plan"></a>
+                    <a href="img/church_4.jpg" data-lightbox="church" data-title="Elevation and section" data-alt="Elevation and section"></a>
+                    <div class="back-side">Church</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/library_1.jpg" data-lightbox="library" data-title="Location" data-alt="Location">
                         <img class="thumbnail-image" src="img/library_0.svg" alt="Helsinki library">
                     </a>
                     <a href="img/library_2.jpg" data-lightbox="library" data-title="Exterior view" data-alt="Exterior view"></a>
+                    <div class="back-side">Helsinki´s library</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/youth_camp_1.jpg" data-lightbox="youth-camp" data-title="Location" data-alt="Location">
@@ -149,6 +157,7 @@
                     <a href="img/youth_camp_3.jpg" data-lightbox="youth-camp" data-title="Multipurpose room" data-alt="Multipurpose room"></a>
                     <a href="img/youth_camp_4.jpg" data-lightbox="youth-camp" data-title="Classroom" data-alt="Classroom"></a>
                     <a href="img/youth_camp_5.jpg" data-lightbox="youth-camp" data-title="Activities room" data-alt="Activities room"></a>
+                    <div class="back-side">Youth Camp</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/art_gallery_1.jpg" data-lightbox="art-gallery" data-title="Interior view" data-alt="Interior view">
@@ -156,6 +165,7 @@
                     </a>
                     <a href="img/art_gallery_2.jpg" data-lightbox="art-gallery" data-title="Interior view" data-alt="Interior view"></a>
                     <a href="img/art_gallery_3.jpg" data-lightbox="art-gallery" data-title="Axonometry" data-alt="Axonometry"></a>
+                    <div class="back-side">Art Gallery</div>
                 </li>
                 <li class="thumbnail-item">
                     <a href="img/music_school_1.jpg" data-lightbox="music" data-title="Location" data-alt="Location">
@@ -165,6 +175,7 @@
                     <a href="img/music_school_3.jpg" data-lightbox="music" data-title="Axonometry" data-alt="Axonometry"></a>
                     <a href="img/music_school_4.jpg" data-lightbox="music" data-title="Exterior view" data-alt="Exterior view"></a>
                     <a href="img/music_school_5.jpg" data-lightbox="music" data-title="Exterior view" data-alt="Exterior view"></a>
+                    <div class="back-side">Music School</div>
                 </li>
             </ul>
         </section>
@@ -176,12 +187,13 @@
                 <li>
                     <a href="https://niweini.github.io/Memory-Game/">
                         <img src="img/memory_game.png" alt="Arcade game">
+                        <span>Arcade game</span>
                     </a>
                 </li>
                 <li>
                     <a href="https://niweini.github.io/Memory-Game/">
                         <img src="img/memory_game.png" alt="Matching game">
-                        <span>Pixel art maker</span>
+                        <span>memory game</span>
                     </a>
                 </li>
                 <li>
@@ -196,6 +208,7 @@
         <section class="about">
             <a id="About"></a>
             <p>About</p>
+            <p>I am an architect, one of those from the old school who builds buildings, but recently I have discovered my passion designing and building digital worlds.</p>
         </section>
 
         <section class="contact">
