Format arch portfolio

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 
         <section class="home">
             <a id="Home"></a>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPDvcE88Ko99WK18BKRiJ9MEpVWQ05UWsBVp-filwJDPwL4Iec" alt="">
+            <img src="img/skyline.svg" alt="">
         </section>
 
         <section class="arch">
             <a id="Arch-Portfolio"></a>
-            <h1>Arch portfolio</h1>
+            <h1 class="section-titles">Arch portfolio</h1>
             <ul class="thumbnail-list">
                 <li class="thumbnail-item">
                     <div class="front-side">
@@ -182,7 +182,7 @@
 
         <section class="websites">
             <a id="Webs"></a>
-            <p>Websites</p>
+            <h1 class="section-titles">Websites</h1>
             <ul class="websites-list">
                 <li>
                     <a href="https://niweini.github.io/Memory-Game/">
@@ -202,18 +202,24 @@
                         <span>Pixel art maker</span>
                     </a>
                 </li>
+                <li>
+                    <a href="https://niweini.github.io/Photography-Portfolio">
+                        <img src="img/pixel_art.png" alt="Photography Portfolio">
+                        <span>Pixel art maker</span>
+                    </a>
+                </li>
             </ul>
         </section>
 
         <section class="about">
             <a id="About"></a>
-            <p>About</p>
+            <h1 class="section-titles">About</h1>
             <p>I am an architect, one of those from the old school who builds buildings, but recently I have discovered my passion designing and building digital worlds.</p>
         </section>
 
         <section class="contact">
             <a id="Contact"></a>
-            <p>Contact</p>
+            <h1 class="section-titles">Contact</h1>
             <form>
                 <label for="name">Full name</label>
                 <input type="text" id="name" placeholder="Your full name..">
