Add animation to home image

--- a/index.html
+++ b/index.html
@@ -26,11 +26,6 @@
 
 <body>
     <header class="main-header">
-        <div class="logo">
-            <img src="img/logo.svg">
-            <p>Arch · Design · Web</p>
-        </div>
-
         <nav class="navigation-bar">
             <ul class="navigation-list">
                 <li>
@@ -40,7 +35,12 @@
                     <a href="#Webs">Webs</a>
                 </li>
                 <li>
-                    <a href="#Home">Home</a>
+                    <div class="logo">
+                        <a href="#Home">
+                            <img src="img/logo.svg">
+                            <!-- <span>Arch · Design · Web</span> -->
+                        </a>
+                    </div>
                 </li>
                 <li>
                     <a href="#About">About me</a>
@@ -56,7 +56,8 @@
 
         <section class="home">
             <a id="Home"></a>
-            <img src="img/skyline.svg" alt="">
+            <div class="image">
+            </div>
         </section>
 
         <section class="arch">
@@ -187,26 +188,26 @@
                 <li>
                     <a href="https://niweini.github.io/Memory-Game/">
                         <img src="img/memory_game.png" alt="Arcade game">
-                        <span>Arcade game</span>
                     </a>
+                    <a href="https://niweini.github.io/Memory-Game/">Arcade Game</a>
                 </li>
                 <li>
                     <a href="https://niweini.github.io/Memory-Game/">
                         <img src="img/memory_game.png" alt="Matching game">
-                        <span>memory game</span>
                     </a>
+                    <a href="https://niweini.github.io/Memory-Game/">Memory Game</a>
                 </li>
                 <li>
                     <a href="https://niweini.github.io/Pixel-Art-Maker/">
                         <img src="img/pixel_art.png" alt="Matching game">
-                        <span>Pixel art maker</span>
                     </a>
+                    <a href="https://niweini.github.io/Pixel-Art-Maker/">Pixel Art Maker</a>
                 </li>
                 <li>
                     <a href="https://niweini.github.io/Photography-Portfolio">
                         <img src="img/pixel_art.png" alt="Photography Portfolio">
-                        <span>Pixel art maker</span>
                     </a>
+                    <a href="https://niweini.github.io/Photography-Portfolio">Photography Portfolio</a>
                 </li>
             </ul>
         </section>
