--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-116950917-1');
     </script>
 </head>
@@ -29,21 +28,19 @@
         <nav class="navigation-bar">
             <ul class="navigation-list">
                 <li>
-                    <a href="#Arch-Portfolio">Arch Portfolio</a>
+                    <a href="#About">About</a>
                 </li>
                 <li>
-                    <a href="#Webs">Webs</a>
+                    <a href="#Webs">Web Design</a>
                 </li>
                 <li>
-                    <div class="logo">
-                        <a href="#Home">
-                            <img src="img/logo.svg">
-                            <!-- <span>Arch · Design · Web</span> -->
-                        </a>
-                    </div>
+                    <a href="#Home">
+                        <img class="logo" src="img/logo.svg">
+                        <!-- <span>Arch · Design · Web</span> -->
+                    </a>
                 </li>
                 <li>
-                    <a href="#About">About me</a>
+                    <a href="#Arch-Portfolio">Architecture</a>
                 </li>
                 <li>
                     <a href="#Contact">Contact</a>
