Add typoround texttype

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
             <li><a href="https://www.instagram.com/niweini/" class="fab fa-instagram"></a></li>
             <li><a href="https://github.com/NiWeiNi" class="fab fa-github"></a></li>
         </ul>
+        <p class="last-words">Crafted with care by <span class="logotype">© nWn</span></p>
     </footer>
 
     <script src="js/lightbox.js"></script>
