Fix logos footer

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <li><a href="https://www.instagram.com/niweini/" class="fab fa-instagram"></a></li>
             <li><a href="https://github.com/NiWeiNi" class="fab fa-github"></a></li>
         </ul>
-        <p class="last-words">Crafted with care by © <span class="logotype">n<span class="w-logo">W</span>n</span></p>
+        <p class="signature">Crafted with care by © <span class="logotype">n<span class="w-logo">W</span>n</span></p>
     </footer>
 
     <script src="js/lightbox.js"></script>
