Change forms without labels

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                     </p>
                     <p>Thanks for reading until here, would be wonderful if we can collaborate in some amazing projects.
                     </p>
+                    <p>CV</p>
                 </div>
             </div>
         </section>
@@ -237,14 +238,14 @@
             <h1 class="section-titles">Contact</h1>
             <form>
                 <div class="name-email">
-                    <label for="name">Full name</label>
-                    <input type="text" id="name" placeholder="Full name..">
+                    <label for="name"></label>
+                    <input type="text" id="name" placeholder="Full name">
     
-                    <label for="email">Your e-mail</label>
-                    <input type="text" id="email" placeholder="e-mail..">
+                    <label for="email"></label>
+                    <input type="text" id="email" placeholder="e-mail">
                 </div>
 
-                <label for="subject">Subject</label>
+                <label for="subject"></label>
                 <textarea name="subject" id="subject" cols="30" rows="10" placeholder="Hire a web developer or leave a comment.."></textarea>
 
                 <input type="submit" value="Submit">
