Add two more websites coming soon

--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
                 <li class="websites-item">
                     <div class="website-name">Photography Portfolio</div>
                     <a href="https://niweini.github.io/Memory-Game/">
+                        <img src="img/coming_soon.png" alt="Photography portfolio">
+                    </a>
+                </li>
+                <li class="websites-item">
+                    <div class="website-name">Photography Portfolio</div>
+                    <a href="https://niweini.github.io/Memory-Game/">
+                        <img src="img/coming_soon.png" alt="Photography portfolio">
+                    </a>
+                </li>
+                <li class="websites-item">
+                    <div class="website-name">Photography Portfolio</div>
+                    <a href="https://niweini.github.io/Memory-Game/">
                         <img src="img/photography_portfolio.png" alt="Photography portfolio">
                     </a>
                 </li>
