Add more pictures to icecity

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                         <img class="thumbnail-image" src="img/ice_city_0.svg" alt="Ice city logo">
                     </a>
                     <a href="img/ice_city_2.jpg" data-lightbox="ice-city" data-title="Axonometry" data-alt="Axonometry"></a>
+                    <a href="img/ice_city_3.jpg" data-lightbox="ice-city" data-title="Axonometry" data-alt="Axonometry"></a>
+                    <a href="img/ice_city_4.jpg" data-lightbox="ice-city" data-title="Axonometry" data-alt="Axonometry"></a>
+                    <a href="img/ice_city_5.jpg" data-lightbox="ice-city" data-title="Axonometry" data-alt="Axonometry"></a>
+                    <a href="img/ice_city_6.jpg" data-lightbox="ice-city" data-title="Axonometry" data-alt="Axonometry"></a>
                     <div class="back-side">Ice City</div>
                 </li>
                 <li class="thumbnail-item">
