Fix download cv section

--- a/index.html
+++ b/index.html
@@ -230,9 +230,7 @@
             <h1 class="section-titles">About</h1>
             <div class="about-content">
                 <div class="column">
-                    <p>I have a Masters of architecture from UPM, Polytechnic University of Madrid, had several years experience
-                    working in different architecture offices but recently I have discovered my passion designing and building 
-                    digital worlds.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                     <p>The transition the architecture field is experiencing, to a much tehnological and digital linked profession, pushed our
                     representation systems to test, and it will make radical changes in the near future. 
                     All came from designing scripts in Dynamo to extend the potential of Revit and to facilitate architects
@@ -246,16 +244,17 @@
                     </p>
                     <p>Thanks for reading until here, would be wonderful if we can collaborate in some amazing projects.
                     </p>
-                    <p class="cv-download">
-                        <a href="#">
+                    <h3 class="h3-about">CV and Portfolio in PDF</h3>
+                    <div class="cv-download">
+                        <a href="downloads/CV_WeiNiNi_en_web.pdf" class="a-left">
                             <img src="img/cv_logo.svg" alt="" class="cv-logo">
-                            <span>CV</span>
+                            <span class="span-left">CV</span>
                         </a>
-                        <a href="#">
+                        <a href="downloads/CV_WeiNiNi_en_web.pdf" class="a-right">
                             <img src="img/portfolio_logo.svg" alt="" class="cv-logo">
-                            <span>Portfolio</span>
+                            <span class="span-right">Portfolio</span>
                         </a>
-                    </p>
+                    </div>
                 </div>
             </div>
         </section>
