Add typewritter effect signature

--- a/index.html
+++ b/index.html
@@ -287,7 +287,11 @@
             <li><a href="https://www.instagram.com/niweini/" class="fab fa-instagram"></a></li>
             <li><a href="https://github.com/NiWeiNi" class="fab fa-github"></a></li>
         </ul>
-        <p class="signature">Crafted with care by © <span class="logotype">n<span class="w-logo">W</span>n</span></p>
+        <p class="signature">Crafted with 
+            <span class="typewrite" data-period="2000" data-type='[ "care", "love", "passion" ]'>
+                <span class="wrap"></span>
+            </span>
+        by © <span class="logotype">n<span class="w-logo">W</span>n</span></p>
     </footer>
 
     <script src="js/lightbox.js"></script>
