Update small screen menu

--- a/index.html
+++ b/index.html
@@ -26,18 +26,17 @@
 <body>
     <header class="main-header">
         <nav class="navigation-bar">
+            <a href="#Home">
+                <img class="logo" src="img/logo.svg">
+                <!-- <span>Arch · Design · Web</span> -->
+            </a>
+            <div class="circle-nav"></div>
             <ul class="navigation-list">
                 <li>
                     <a href="#About">About</a>
                 </li>
                 <li>
                     <a href="#Webs">Web Design</a>
-                </li>
-                <li>
-                    <a href="#Home">
-                        <img class="logo" src="img/logo.svg">
-                        <!-- <span>Arch · Design · Web</span> -->
-                    </a>
                 </li>
                 <li>
                     <a href="#Arch-Portfolio">Architecture</a>
@@ -2855,7 +2854,7 @@
 
         <section class="arch">
             <a id="Arch-Portfolio"></a>
-            <h1 class="section-titles">Arch portfolio</h1>
+            <h1 class="section-titles">Architecture</h1>
             <ul class="thumbnail-list">
                 <li class="thumbnail-item">
                     <div class="front-side">
