--- a/index.html
+++ b/index.html
@@ -2994,25 +2994,26 @@
                     <div class="website-name">Photography Portfolio</div>
                 </li>
                 <li class="websites-item">
-                    <a href="https://niweini.github.io/Memory-Game/">
+                    <a href="https://niweini.github.io/Photography-Portfolio">
                         <img src="img/photography_portfolio.png" alt="Photography portfolio">
                     </a>
                     <div class="website-name">Photography Portfolio</div>
                 </li>
                 <li class="websites-item">
-                    <a href="https://niweini.github.io/Memory-Game/">
+                    <a href="https://niweini.github.io/Arcade-Game">
                         <img src="img/arcade_game.png" alt="Arcade game">
                     </a>
                     <div class="website-name">Arcade Game</div>
                 </li>
                 <li class="websites-item">
-                    <a href="https://niweini.github.io/Pixel-Art-Maker/">
+                        
+                    <a href="https://niweini.github.io/Memory-Game">
                         <img src="img/memory_game.PNG" alt="Matching game">
                     </a>
                     <div class="website-name">Memory Game</div>
                 </li>
                 <li class="websites-item">
-                    <a href="https://niweini.github.io/Photography-Portfolio">
+                    <a href="https://niweini.github.io/Pixel-Art-Maker">
                         <img src="img/pixel_art.PNG" alt="pixel art maker">
                     </a>
                     <div class="website-name">Pixel Art Maker</div>
@@ -3074,6 +3075,7 @@
                 <input type="submit" value="Send">
             </form>
         </section>
+
     </main>
 
     <footer>
