--- a/index.html
+++ b/index.html
@@ -4536,7 +4536,7 @@
                 </div>
 
                 <label for="subject">Subject</label>
-                <textarea name="subject" id="subject" cols="30" rows="10" placeholder="Contact me for any listed service or leave a much appreciated comment..."></textarea>
+                <textarea name="subject" id="subject" cols="30" rows="10" placeholder="Please, leave a much appreciated comment..."></textarea>
 
                 <input type="text" name="_gotcha" style="display:none">
 
